# SEAM

./: .gitignore  GAP_AUDIT_REPORT.md  LICENSE  README.en.md  README.md  README.zh.md  cuda_custom_op_skill_test_prompt.md
.github/: .pylint_autofix_initialized
.github/workflows/: pylint.yml
.memory/: README.md  manifest.json
.memory/index/: cases.jsonl  experiences.jsonl
.memory/memory/: manifest.json
.memory/skills/: candidate-001-cann-driver-memory-invisibility.json  candidate-002-vllm-mrotary-embedding-api-removal.json  candidate-003-vllm-get-input-embeddings-migration.json  candidate-004-ascend-scheduler-output-grammar-bitmask-guard.json  candidate-005-npu-tensor-serialization-tolist-clear.json  candidate-006-vllm-ascend-api-mismatch-detection.json  candidate-007-off-by-one-string-slice-prefix-length-fix.json
.skills/cuda-custom-op-to-npu-custom-op/: SKILL.md
.skills/cuda-custom-op-to-npu-custom-op/templates/ascend_custom_op/: CMakeLists.txt  CMakePresets.json  build.sh
.skills/cuda-custom-op-to-npu-custom-op/templates/ascend_custom_op/op_host/: op_template.cpp
.skills/cuda-custom-op-to-npu-custom-op/templates/ascend_custom_op/op_kernel/: op_template.cpp
docs/: 08_SPEECHGPT_ANALYSIS_AND_IMPROVEMENT_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  HALLO_CHAILAB_E2E_GUIDE.md  SEAM_Tech_Intro.zh.md  Use_Cases.md  User_Guide.md  main-vs-v1.1.2-autofix-risk-audit.md  migration_utils_platform_adaptation_guide.md  session-idle-refetch-and-todo-nudge-design.md  v1.1.1-dev-change-record.md  v1.1.2-dev-change-record.md
docs/dev_examples/: GAP_AUDIT_REPORT.md  开发时思路示例文档_skill的prompt.md  开发时思路示例文档_功能迭代.md  开发时思路示例文档_模型迁移测试思路.md
docs/gpu_docs/: 华为AscendNPU.md  沐曦MetaX.md  沐曦Metex.md  阿里平头哥PPU.md
memory/: manifest.json
memory/index/: cases.jsonl  experiences.jsonl
migration_utils/: README.md  constraints_normal_entry_057.md  pyproject.toml
migration_utils/config/: framework_defaults.yaml
migration_utils/core/: accelerator_context.py  config.py  config_loader.py  custom_op_opp_preflight.py  execution_backend.py  experience_classifier.py  experience_promoter.py  experience_query.py  experience_registry.py  experience_solidifier.py  orchestrator.py  paths.py  phase_boundary.py  phase_runner.py  platform_policy.py  prompt_loader.py  repair_loop.py  runtime_artifacts.py  runtime_skill_resolver.py  state_machine.py  types.py  validation_correction.py  validator_engine.py  workflow_executor.py
migration_utils/docs/: E2E_TESTING.md  adaptation_improvements_20260428.md  e2e_test_guide_deepwave.md  framework-architecture-flowchart.md  full_agent_io_logging_design.md  improvement_plan.md  improvement_plan_phase3_oom.md  improvement_plan_v2.md
migration_utils/migrator/: __init__.py
migration_utils/prompts/: experience_query.md  phase_0_env_detect.md  phase_0_env_detect_musa.md  phase_1_5_constraint_summary.md  phase_1_5_constraint_summary_musa.md  phase_1_project_analysis.md  phase_1_project_analysis_musa.md  phase_1_project_analysis_ppu.md  phase_2_venv_create_musa_container_baseaware.md  phase_2_venv_create_ppu.md  phase_2_venv_create_ppu_container_baseaware.md  phase_35_static_validate.md  phase_35_static_validate_musa_baseaware.md  phase_35_static_validate_ppu.md  phase_35_static_validate_ppu_baseaware.md  phase_35_static_validate_ppu_normal_entry_057.md  phase_3_entry_script.md  phase_3_entry_script_musa_container_baseaware_entryfix.md  phase_3_entry_script_ppu.md  phase_3_entry_script_ppu_container_baseaware.md  phase_3_entry_script_ppu_container_baseaware_entryfix.md  phase_3_entry_script_ppu_normal_entry_057.md  phase_5_review.md  phase_5_review_container.md  phase_5_review_container_musa.md  phase_5_review_container_ppu.md  phase_5_validation.md  phase_6_report.md  phase_6_report_musa.md  phase_error_recovery.md  phase_error_recovery_container.md  phase_error_recovery_container_musa.md  phase_error_recovery_container_ppu.md  phase_review_improvement.md  phase_review_improvement_container_musa.md  phase_review_improvement_container_ppu.md  repair_code_adapter_container_musa.md  repair_dependency_fixer.md  repair_dependency_fixer_container.md  repair_dependency_fixer_container_musa.md  (+3 more)
migration_utils/rule_strategies/: report_only.yaml
migration_utils/schemas/: output_experience_refine.json  phase_1_project_analysis.json  phase_3_entry_script.json  phase_4_rule_migration.json  phase_5_validation_final.json
migration_utils/scripts/: monitor_e2e.sh  run_e2e.sh  run_e2e_v2.sh  run_e2e_v3.sh  sm_adapt_cli.py  test_e2e_memory.sh
migration_utils/test_project_complex/: README.md
migration_utils/test_project_template/: requirements.txt  train.py
scripts/: autofix_pylint_copy.py  check.sh  check_opencode_config.py  diagnose_seam_opencode.py  real_session_idle_nudge_test.py
src/: README.md  constraints_normal_entry_057.md  local_constraints_glmocr_vllm.md  pyproject.toml  user_constraints_glmocr_sglang.md  user_constraints_glmocr_vllm.md  user_constraints_mineru_vllm.md
tests/: __init__.py
wrappers/: CUDAToolkitConfig.cmake  cuda_runtime.h  nvcc  nvcc_wrapper.sh
(+624 files in other folders)
